5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4145/executions/1638_2728.log
== TEST (2019-04-16 10:35:23) 
-- CODE:
d = float(input("distancia percorrida: "))
tc = input("tipo de carro: ").upper()

if(tc == A):
	con = d*8
else:
	con = d*12
print(con)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(tc == A):
NameError: name 'A' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:35:37) 
-- CODE:
d = float(input("distancia percorrida: "))
tc = input("tipo de carro: ").upper()

if(tc == "A"):
	con = d*8
else:
	con = d*12
print(con)
-- OUTPUT:
780.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:35:52) 
-- CODE:
d = float(input("distancia percorrida: "))
tc = input("tipo de carro: ").upper()

if(tc == "A"):
	con = d/8
else:
	con = d/12
print(con)
-- OUTPUT:
5.416666666666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:36:08) 
-- CODE:
d = float(input("distancia percorrida: "))
tc = input("tipo de carro: ").upper()

if(tc == "A"):
	con = d/8
else:
	con = d/12
print(con)
-- EXECUTION TIME:
0.263708
-- TEST CASE 1:
---- input:
65
B

---- correct output:
5.42
---- user output:
5.416666666666667
-- TEST CASE 2:
---- input:
65
A
---- correct output:
8.12
---- user output:
8.125
-- TEST CASE 3:
---- input:
200
A
---- correct output:
25.0
---- user output:
25.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:37:23) 
-- CODE:
d = float(input("distancia percorrida: "))
tc = input("tipo de carro: ")

if(tc == "A"):
	con = d/8
else:
	con = d/12
print(con)
-- OUTPUT:
5.416666666666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:37:36) 
-- CODE:
d = float(input("distancia percorrida: "))
tc = input("tipo de carro: ")

if(tc == "A"):
	con = d/8
else:
	con = d/12
print(con)
-- OUTPUT:
5.416666666666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:37:52) 
-- CODE:
d = float(input("distancia percorrida: "))
tc = input("tipo de carro: ")

if(tc == "A"):
	con = d/8
else:
	con = d/12
print(con)
-- EXECUTION TIME:
0.191245
-- TEST CASE 1:
---- input:
65
B

---- correct output:
5.42
---- user output:
5.416666666666667
-- TEST CASE 2:
---- input:
65
A
---- correct output:
8.12
---- user output:
8.125
-- TEST CASE 3:
---- input:
200
A
---- correct output:
25.0
---- user output:
25.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:44:06) 
-- CODE:
d = float(input("distancia percorrida: "))
tc = input("tipo de carro: ")

if(tc == "A"):
	con = d/8
else:
	con = d/12
print(con)
-- OUTPUT:
5.416666666666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:44:17) 
-- CODE:
d = float(input("distancia percorrida: "))
tc = input("tipo de carro: ")

if(tc == "A"):
	con = d/8
else:
	con = d/12
print(con)
-- EXECUTION TIME:
0.195656
-- TEST CASE 1:
---- input:
65
B

---- correct output:
5.42
---- user output:
5.416666666666667
-- TEST CASE 2:
---- input:
65
A
---- correct output:
8.12
---- user output:
8.125
-- TEST CASE 3:
---- input:
200
A
---- correct output:
25.0
---- user output:
25.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
